--- a/docs/gateway/guides/tool-use.mdx
+++ b/docs/gateway/guides/tool-use.mdx
@@ -3,13 +3,6 @@ title: Tool Use (Function Calling)
 description: Learn how to use tool use (function calling) with TensorZero Gateway.
 ---
 
-import {
-  CardGrid,
-  LinkCard,
-  Tabs,
-  TabItem,
-} from "@astrojs/starlight/components";
-
 TensorZero has first-class support for tool use, a feature that allows LLMs to interact with external tools (e.g. APIs, databases, web browsers).
 
 Tool use is available for most model providers supported by TensorZero.
@@ -371,21 +364,17 @@ See our [MCP (Model Context Protocol) Example on GitHub](https://github.com/tens
 
 ## Learn More
 
-<CardGrid>
-
-<LinkCard
-  title="API Reference: Inference"
-  href="/docs/gateway/api-reference/inference/"
-/>
-
-<LinkCard
-  title="API Reference: Inference (OpenAI-Compatible)"
-  href="/docs/gateway/api-reference/inference-openai-compatible/"
-/>
-
-<LinkCard
-  title="Configuration Reference"
-  href="/docs/gateway/configuration-reference/"
-/>
-
-</CardGrid>
+<Columns cols={2}>
+  <Card
+    title="API Reference: Inference"
+    href="/docs/gateway/api-reference/inference/"
+  ></Card>
+  <Card
+    title="API Reference: Inference (OpenAI-Compatible)"
+    href="/docs/gateway/api-reference/inference-openai-compatible/"
+  ></Card>
+  <Card
+    title="Configuration Reference"
+    href="/docs/gateway/configuration-reference/"
+  ></Card>
+</Columns>
