--- a/docs/_copy/evaluations/static-evaluations/configuration-reference.mdx
+++ b/docs/_copy/evaluations/static-evaluations/configuration-reference.mdx
@@ -1,8 +1,6 @@
 ---
 title: Configuration Reference
 description: Learn how to configure TensorZero Evaluations.
-tableOfContents:
-  maxHeadingLevel: 5
 ---
 
 <Tip>
@@ -81,17 +79,7 @@ type = "llm_judge"
 ```
 
 <details open>
-<Accordion title="
-<code dir="auto">type: "exact_match"</code>
-
-{/* for the table of contents */}
-
-<span class="hidden">
-
-##### `type: "exact_match"`
-
-</span>
-">
+<Accordion title='type: "exact_match"'>
 
 ###### `cutoff`
 
@@ -105,17 +93,7 @@ If the average value of this evaluator is below the cutoff, the evaluations bina
 </Accordion>
 
 <details open>
-<Accordion title="
-<code dir="auto">type: "llm_judge"</code>
-
-{/* for the table of contents */}
-
-<span class="hidden">
-
-##### `type: "llm_judge"`
-
-</span>
-">
+<Accordion title='type: "llm_judge"'>
 
 ###### `input_format`
 
