--- a/docs/gateway/clients.mdx
+++ b/docs/gateway/clients.mdx
@@ -1,5 +1,6 @@
 ---
 title: TensorZero Gateway Clients
+sidebarTitle: Clients
 description: The TensorZero Gateway can be used with the TensorZero Python client, with OpenAI clients (e.g. Python/Node), or via its HTTP API in any programming language.
 ---
 
