--- a/docs/gateway/deployment.mdx
+++ b/docs/gateway/deployment.mdx
@@ -1,5 +1,6 @@
 ---
 title: TensorZero Gateway Deployment Guide
+sidebarTitle: Deployment
 description: Learn how to deploy the TensorZero Gateway.
 ---
 
