--- a/docs/gateway/api-reference/batch-inference.mdx
+++ b/docs/gateway/api-reference/batch-inference.mdx
@@ -1,5 +1,6 @@
 ---
 title: "API Reference: Batch Inference"
+sidebarTitle: Batch Inference
 description: API reference for the Batch Inference endpoints.
 ---
 
