--- a/docs/gateway/api-reference/datasets-datapoints.mdx
+++ b/docs/gateway/api-reference/datasets-datapoints.mdx
@@ -1,5 +1,6 @@
 ---
 title: "API Reference: Datasets & Datapoints"
+sidebarTitle: Datasets & Datapoints
 description: API reference for endpoints that manage datasets and datapoints.
 ---
 
