--- a/docs/gateway/api-reference/inference-openai-compatible.mdx
+++ b/docs/gateway/api-reference/inference-openai-compatible.mdx
@@ -1,5 +1,6 @@
 ---
 title: "API Reference: Inference (OpenAI-Compatible)"
+sidebarTitle: Inference (OpenAI)
 description: API reference for the `/openai/v1/chat/completions` endpoint.
 ---
 
