--- a/docs/gateway/api-reference/auxiliary-endpoints.mdx
+++ b/docs/gateway/api-reference/auxiliary-endpoints.mdx
@@ -1,5 +1,6 @@
 ---
 title: "API Reference: Auxiliary Endpoints"
+sidebarTitle: Auxiliary Endpoints
 description: Useful endpoints for deploying and observing the TensorZero gateway.
 ---
 
