--- a/docs/evaluations/dynamic-evaluations/tutorial.mdx
+++ b/docs/evaluations/dynamic-evaluations/tutorial.mdx
@@ -1,5 +1,6 @@
 ---
 title: "Tutorial: Dynamic Evaluations"
+sidebarTitle: "Tutorial"
 description: Learn how to use the TensorZero Dynamic Evaluations to build principled LLM-powered applications.
 ---
 
