--- a/docs/evaluations/index.mdx
+++ b/docs/evaluations/index.mdx
@@ -1,5 +1,6 @@
 ---
 title: "TensorZero Evaluations Overview"
+sidebarTitle: "Overview"
 description: Learn how to use the TensorZero Evaluations to build principled LLM-powered applications.
 ---
 
