--- a/docs/evaluations/static-evaluations/cli-reference.mdx
+++ b/docs/evaluations/static-evaluations/cli-reference.mdx
@@ -37,7 +37,7 @@ docker compose run --rm evaluations \
     --concurrency 5
 ```
 
-<Accordion title="Building from Source</Accordion>
+<Accordion title="Building from Source">
 
 You can build the TensorZero Evaluations CLI from source if necessary. See our [GitHub repository](https://github.com/tensorzero/tensorzero/tree/main/evaluations) for instructions.
 
@@ -146,6 +146,6 @@ If you configure a `cutoff` for any of your evaluators, the evaluation will fail
 
 The exit status code is helpful for integrating TensorZero Evaluations into your CI/CD pipeline.
 
-You can define sanity checks for your variants with `cutoff` to detect performance regressions early before shipping to production
+You can define sanity checks for your variants with `cutoff` to detect performance regressions early before shipping to production.
 
 </Tip>
