--- a/docs/evaluations/static-evaluations/configuration-reference.mdx
+++ b/docs/evaluations/static-evaluations/configuration-reference.mdx
@@ -78,8 +78,7 @@ type = "llm_judge"
 # ...
 ```
 
-<details open>
-<Accordion title='type: "exact_match"'>
+<Accordion title='type: "exact_match"' defaultOpen="true">
 
 ###### `cutoff`
 
@@ -92,8 +91,7 @@ If the average value of this evaluator is below the cutoff, the evaluations bina
 
 </Accordion>
 
-<details open>
-<Accordion title='type: "llm_judge"'>
+<Accordion title='type: "llm_judge"' defaultOpen="true">
 
 ###### `input_format`
 
