--- a/docs/evaluations/static-evaluations/tutorial.mdx
+++ b/docs/evaluations/static-evaluations/tutorial.mdx
@@ -1,5 +1,6 @@
 ---
 title: "Tutorial: Static Evaluations"
+sidebarTitle: "Tutorial"
 description: Learn how to use the TensorZero Static Evaluations to build principled LLM-powered applications.
 ---
 
