--- a/docs/gateway/guides/opentelemetry-otlp.mdx
+++ b/docs/gateway/guides/opentelemetry-otlp.mdx
@@ -66,12 +66,9 @@ For inference requests, these traces additionally contain spans that represent t
 
 ![Screenshot of TensorZero Gateway traces in Jaeger](./opentelemetry-otlp-jaeger.png)
 
-<center>
-  <small>
-    Example: Screenshot of a TensorZero Gateway inference request trace in
-    Jaeger
-  </small>
-</center>
+<small>
+  Example: Screenshot of a TensorZero Gateway inference request trace in Jaeger
+</small>
 
 <Tip>
 
