--- a/docs/recipes/index.mdx
+++ b/docs/recipes/index.mdx
@@ -71,11 +71,7 @@ More recipes for prompt optimization are planned.
 
 MIPRO (Multi-prompt Instruction PRoposal Optimizer) is a method for automatically improving system instructions and few-shot demonstrations in LLM applications — including ones with multiple LLM functions or calls.
 
-<center>
-
-![MIPRO Diagram](./index-mipro-diagram.svg)
-
-</center>
+![MIPRO Diagram](/recipes/index-mipro-diagram.svg)
 
 MIPRO can optimize prompts across an entire LLM pipeline without needing fine-grained labels or gradients. Instead, it uses a Bayesian optimizer to figure out which instructions and demonstrations actually improve end-to-end performance. By combining application-aware prompt proposals and stochastic mini-batch evaluations, MIPRO can improve downstream task performance compared to traditional prompt engineering approaches.
 
