--- a/docs/evaluations/dynamic-evaluations/api-reference.mdx
+++ b/docs/evaluations/dynamic-evaluations/api-reference.mdx
@@ -1,5 +1,6 @@
 ---
 title: "API Reference: Dynamic Evaluations"
+sidebarTitle: "API Reference"
 description: API reference for dynamic evaluations in TensorZero.
 ---
 
