--- a/docs/gateway/guides/inference-time-optimizations.mdx
+++ b/docs/gateway/guides/inference-time-optimizations.mdx
@@ -81,13 +81,11 @@ This example showcases how best-of-N sampling can significantly enhance an LLM's
 
 ## Chain-of-Thought (CoT)
 
-<center>
-  <Image
-    src="./inference-time-optimizations-best-of-n-sampling.png"
-    alt="Inference-Time Optimization: Chain-of-Thought (CoT)"
-    height=480
-  />
-</center>
+<img
+  src="./inference-time-optimizations-best-of-n-sampling.png"
+  alt="Inference-Time Optimization: Chain-of-Thought (CoT)"
+  height={480}
+/>
 
 Chain-of-Thought (CoT) is an inference-time optimization strategy that enhances LLM performance by encouraging the model to reason step by step before producing a final answer.
 This technique encourages the model to think through the problem, making it more likely to produce a correct and coherent response.
