--- a/docs/ui/deployment.mdx
+++ b/docs/ui/deployment.mdx
@@ -1,5 +1,6 @@
 ---
 title: TensorZero UI Deployment Guide
+sidebarTitle: Deployment Guide
 description: Learn more about deploying the TensorZero UI.
 ---
 
