Update the base model to gpt-4-1-mini

--- a/examples/data-extraction-ner-sft-dpo/ner-sft-dpo.ipynb
+++ b/examples/data-extraction-ner-sft-dpo/ner-sft-dpo.ipynb
@@ -339,10 +339,10 @@
     "# Include the variants in `tensorzero.toml` that we want to evaluate\n",
     "# Update (uncomment) after each SFT and DPO\n",
     "VARIANTS_TO_EVALUATE = [\n",
-    "    \"gpt_4o\",\n",
-    "    \"gpt_4o_mini\",\n",
-    "    # \"gpt_4o_mini_sft_fine_tuned\",\n",
-    "    # \"gpt_4o_mini_sft_dpo_fine_tuned\",\n",
+    "    \"gpt_4_1\",\n",
+    "    \"gpt_4_1_mini\",\n",
+    "    # \"gpt_4_1_mini_sft\",\n",
+    "    # \"gpt_4_1_mini_sft_dpo\",\n",
     "]"
    ]
   },
@@ -473,13 +473,13 @@
     "## Apply Spervised Fine-Tuning (SFT)\n",
     "\n",
     "At this point, your ClickHouse database will include inferences in a structured format along with feedback on they they went. You can use TensorZero recipes to produce better variants of the NER system.\n",
-    "For this example, we'll apply a fine-tuning (SFT) recipe by opening the UI (`http://localhost:4000/`) and clicking on the `Supervised Fine-Tuning` tab. Let's run fine-tuning on GPT-40 Mini (`gpt_4.1-mini-2025-04-14`) with OpenAI using the `exact_match` metric. This process may take some time.\n",
+    "For this example, we'll apply a fine-tuning (SFT) recipe by opening the UI (`http://localhost:4000/`) and clicking on the `Supervised Fine-Tuning` tab. Let's run fine-tuning on GPT-4.1 Mini (`gpt_4.1-mini-2025-04-14`) with OpenAI using the `exact_match` metric. This process may take some time.\n",
     "\n",
     "Once you finish fine-tuning, you'll see additional configuration blocks. For this example, we only need the `model_name` which we'll use to create a new variant in the `tensorzero.toml` file.   \n",
     "\n",
     "\n",
     "```toml\n",
-    "[functions.extract_entities.variants.gpt_4o_mini_sft_fine_tuned]\n",
+    "[functions.extract_entities.variants.gpt_4_1_mini_sft]\n",
     "type = \"chat_completion\"\n",
     "model = \"openai::ft:gpt-4.1-mini-2025-04-14:xxxxxxxx::xxxxxxxx\"  # TODO: Replace with your model ID\n",
     "system_template = \"functions/extract_entities/initial_prompt/system_template.minijinja\"\n",
@@ -488,7 +488,7 @@
     "\n",
     "**Restart the TensorZero Gateway to apply the new configuration.** You can do this by killing the running container and re-running `docker compose up`.\n",
     "\n",
-    "To see the new variant for SFT, uncomment `#\"gpt_4o_mini_sft_fine_tuned\",` in the VARIANTS_TO_EVALUATE, then re-run the `ner-sft-dpo.ipynb` notebook (run only the NER part, just before this section `Apply Supervised Fine-Tuning`).\n",
+    "To see the new variant for SFT, uncomment `#\"gpt_4_1_mini_sft\",` in the VARIANTS_TO_EVALUATE, then re-run the `ner-sft-dpo.ipynb` notebook (run only the NER part, just before this section `Apply Supervised Fine-Tuning`).\n",
     "You'll see the fine-tuned GPT-40 Mini outperforms GPT-40 on this task."
    ]
   },
@@ -519,10 +519,10 @@
    "source": [
     "CONFIG_PATH = \"config/tensorzero.toml\"\n",
     "FUNCTION_NAME = \"extract_entities\"\n",
-    "TEMPLATE_VARIANT_NAME = \"gpt_4o_mini\"\n",
-    "MODEL_NAME = \"ft:gpt-4.1-mini-2025-04-14:xxxxxxxx::xxxxxxxx\"  # Replace this with your SFT model to apply DPO\n",
+    "TEMPLATE_VARIANT_NAME = \"gpt_4_1_mini_sft\"\n",
+    "MODEL_NAME = \"ft:gpt-4.1-mini-2025-04-14:codeday::C6hOxHy3\"  # Replace this with your SFT model to apply DPO\n",
     "VAL_FRACTION = 0.2\n",
-    "MAX_SAMPLES = 500"
+    "MAX_SAMPLES = 1000"
    ]
   },
   {
